# parsimony-connectors

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  Makefile  OFFICIAL_PLUGINS.json  README.md  SECURITY.md  connectors.json  mkdocs.yml  pyproject.toml  registry.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_connector.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  integration.yml  release.yml  secrets-scan.yml
docs/: auth-discovery-matrix.md  catalog-manifest.md  catalog-operations.md  getting-started.md  index.md  licence-audit.md  manifest.md  pypi-setup.md  registry.md  testing-template.md
docs/_guidebook/: README.md
docs/_guidebook/providers/: _TEMPLATE.md  bde.md  bdf.md  bdp.md  bls.md  boc.md  boj.md  destatis.md  eia.md  rba.md  riksbank.md  sec_edgar.md  snb.md  treasury.md
docs/concepts/: connectors.md  credentials.md  discovery-and-catalogs.md  errors.md
docs/contributing/: authoring-a-connector.md
docs/guides/: building-catalogs.md  using-connectors.md
docs/reference/: cli.md  providers.md
scripts/: acceptance_gate.sh  catalog_dataset_card.py  catalog_manifest_summary.py  gen_roster.py  mcp_e2e_test.py  publish_v1_catalogs.sh  push_catalog.sh  rebuild_catalogs_v1.sh  validate_catalog.py
test_support/: pyproject.toml
test_support/parsimony_test_support/: __init__.py  catalog_remote.py  harness.py  integration.py  suites.py
test_support/tests/: test_credential_suite.py
tests/: test_catalog_dataset_card.py  test_catalog_validate.py  test_connector_contract_guards.py  test_gen_roster.py  test_local_catalog_v1.py  test_release_surface.py  test_remote_catalogs.py
tooling/: prune_and_push_catalog.py  publish_catalog_dataset_card.py  publish_v1_catalogs.py  push_catalog.sh  rerank_search.py  smoke_test_bdp.py  smoke_test_bls.py  validate_catalog.py
tooling/catalog_validate/: __init__.py  build_auth.py  fixtures.py  index_policy.py  probes.py  queries.TEMPLATE.yaml  registry.py  release_surface.py  runner.py  snapshot_meta.py
tooling/sdmx_eval/: run_eval.py
tools/: gen_registry.py
