[project]
name = "parsimony-connectors-workspace"
version = "0.0.0"
description = "Workspace root for the parsimony connectors monorepo. Not published."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rank-bm25>=0.2",
]

[tool.uv.workspace]
members = ["packages/*", "test_support"]

[tool.uv.sources]
# The kernel pin is `parsimony-core>=0.6,<0.7` on PyPI. The editable
# override below keeps local dev + CI wired against the sibling
# `ockham-sh/parsimony` checkout at `../parsimony`, so the monorepo
# can test against unreleased kernel changes. CI achieves this by
# checking out both repos side-by-side (see ci.yml). The override is
# load-bearing — removing it would pin CI to whatever kernel is on
# PyPI, breaking the ability to verify a kernel+connectors change in
# a single PR.
parsimony-core = { path = "../parsimony", editable = true }
parsimony-shared = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
# `ignore_missing_imports` doesn't suppress `import-untyped` for packages
# that have publishable stubs (requests/PyYAML have `types-*` packages on
# PyPI but we don't install them). Silence the category workspace-wide so
# mypy doesn't nag about stubs the connectors don't need.
disable_error_code = ["import-untyped", "unused-ignore"]

# The financial_reports package was removed in 0.6.0.

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -m 'not integration and not slow and not eval'"
asyncio_mode = "auto"
pythonpath = ["tooling"]
markers = [
    "integration: hits live APIs (may be slow, requires env vars)",
    "remote_catalog: loads published HF/file catalog snapshots (opt-in via PARSIMONY_RUN_REMOTE_CATALOGS=1)",
    "slow: long-running test (subprocess / heavy I/O)",
    "eval: offline retrieval/catalog evaluation harness (opt-in)",
]
