[project]
name = "parsimony-connectors-workspace"
version = "0.0.0"
description = "Workspace root for the parsimony connectors monorepo. Not published."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rank-bm25>=0.2",
]

[tool.uv.workspace]
members = ["packages/*", "test_support"]

[tool.uv.sources]
# `parsimony-core` and `torch` are deliberately NOT here — see the `workbench`
# group below for why. `parsimony-shared` is a workspace member, so its source
# resolves inside the checkout and is safe to inherit.
parsimony-shared = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
# No fixed python_version: mypy targets the interpreter it runs under. The py3.12
# CI job resolves numpy 2.5.0, whose stubs use PEP 695 `type` statements; pinning
# 3.11 here made mypy reject those stubs as a syntax error. Each matrix job now
# type-checks against its own interpreter (3.11 -> numpy 2.4.6, 3.12 -> 2.5.0).
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
# `ignore_missing_imports` doesn't suppress `import-untyped` for packages
# that have publishable stubs (requests/PyYAML have `types-*` packages on
# PyPI but we don't install them). Silence the category workspace-wide so
# mypy doesn't nag about stubs the connectors don't need.
disable_error_code = ["import-untyped", "unused-ignore"]

# The financial_reports package was removed in 0.6.0.

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -m 'not integration and not slow and not eval'"
pythonpath = ["tooling"]
markers = [
    "integration: hits live APIs (may be slow, requires env vars)",
    "remote_catalog: loads published HF/file catalog snapshots (opt-in via PARSIMONY_RUN_REMOTE_CATALOGS=1)",
    "slow: long-running test (subprocess / heavy I/O)",
    "eval: offline retrieval/catalog evaluation harness (opt-in)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    { include-group = "workbench" },
]

# Everything whose `[tool.uv.sources]` entry points OUTSIDE this checkout lives in
# this group, and each source below is scoped to it with `group = "workbench"`.
#
# Why: a workspace-root source is inherited by every member, and uv applies that
# inheritance even when an *external* consumer installs a single member straight
# from git — `uv add "parsimony-fred @ git+…#subdirectory=packages/fred"`. With the
# `parsimony-core = { path = "../parsimony" }` override ungated, uv reinterpreted
# `../parsimony` against the cloned repo root and failed with
# "has no subdirectory `../parsimony`", naming neither parsimony-core nor this file
# (reported as #71). Scoping the source to a group the external consumer never
# enables makes it invisible to that resolution — it falls through to the PyPI pin
# in each package's own `[project] dependencies`, which is the correct external
# behaviour — while `uv sync` here still gets the editable checkout, because the
# default sync enables `dev`.
#
# Consequence to know about: `uv sync --no-dev` resolves parsimony-core from PyPI,
# not from `../parsimony`.
workbench = [
    # Pulls parsimony-core's `catalog` extra (faiss-cpu + sentence-transformers +
    # huggingface_hub) into the workspace so catalog tests can build, save, and
    # search real Catalog instances. End-to-end catalog tests (e.g.
    # sdmx/test_search_structured) exercise the full hybrid-index stack and cannot
    # be served by stubs. The editable override keeps local dev + CI wired against
    # the sibling `ockham-sh/parsimony` checkout at `../parsimony`, so a
    # kernel+connectors change can be verified in a single PR (CI checks both repos
    # out side by side — see ci.yml).
    "parsimony-core[catalog]",
    # Anchor for the CPU-only torch pin. sentence-transformers (transitive via
    # `parsimony-core[catalog]`) declares plain `torch`, which otherwise resolves to
    # the +cu* wheel (~2 GB + triton). We never train/run torch directly — it is
    # just the embedding backend — so CPU torch is plenty. This dep exists only so
    # the source below has something to bind against.
    "torch>=2.0",
]

[tool.uv.sources.parsimony-core]
path = "../parsimony"
editable = true
group = "workbench"

[tool.uv.sources.torch]
index = "pytorch-cpu"
group = "workbench"
